tests/cpp/internal/negative_case/not_implemented_builtin_type_trait.cpp
int main() {
  return __is_lvalue_expr(0);
}
